--- a/pages/contract/rooms/search.mdx
+++ b/pages/contract/rooms/search.mdx
@@ -6,7 +6,7 @@ import Badge from "@components/built-in/Badge";
 
 - Method : <Badge method="GET">GET</Badge>
 - URL : `https://be-java-binar-fp-staging.up.railway.app`
-- Endpoint : `/v1/search` or else
+- Endpoint : `/v1/public/search` or else
 - Headers :
   - `Content-Type: application/json`
   - `Accept: application/json`
